# arduino-projects-book

project_02/: Cargo.toml
project_02/src/: main.rs
project_03/src/: main.rs
project_04/: Cargo.toml
project_04/src/: main.rs
project_05/src/: main.rs
project_06/src/: main.rs
project_07/src/: main.rs
project_08/: Ravedude.toml
project_08/src/: main.rs
project_09/src/: main.rs
project_10/src/: main.rs
project_11/src/: main.rs
project_12/src/: main.rs
project_13/.cargo/: config.toml
project_13/src/: main.rs
project_14/arduino/: Cargo.toml
project_14/arduino/src/: main.rs
project_14/computer/: Cargo.toml
project_14/computer/src/: main.rs
